<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_cart"
            android:title="@string/nav_cart"/>
        <item
            android:id="@+id/nav_book_series"
            android:title="@string/nav_browse_by_series"/>
        <item
            android:id="@+id/nav_all_books"
            android:title="@string/nav_all_books"/>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"/>
    </group>

</menu>