<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:padding="16dp">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accentColor"
        android:text="@string/nav_login"
        android:textColor="@color/white"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/user_profile"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            android:scaleType="fitStart"
            android:src="@drawable/ic_logo_round" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:text="@string/text_welcome"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtName"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_toEndOf="@id/welcome"
            android:text="@string/placeholder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:text="@string/text_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/accentColor"
            android:text="@string/nav_logout"
            android:textColor="@color/white"
            android:theme="@style/Theme.MaterialComponents.DayNight" />

    </RelativeLayout>

</RelativeLayout>