<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <androidx.cardview.widget.CardView
        android:layout_marginHorizontal="40dp"
        app:cardCornerRadius="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_log_in"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp"
                android:layout_below="@id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/edtPassword"
                android:paddingHorizontal="10dp"
                android:layout_below="@id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password" />
            <Button
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_log_in"
                android:textColor="@color/white"
                android:backgroundTint="@color/accentColor"
                android:id="@+id/btnLogin"
                android:layout_below="@id/edtPassword"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>